Middle Commit for transfer. PDF Incomplete. AutoComplete Done